Remove checklist icon, fix alignment issues

--- a/src/style.css
+++ b/src/style.css
@@ -20,19 +20,22 @@ body {
 
 .main-left {
     display: grid;
-    grid-template-rows: 10% 10% 1fr;
+    grid-template-rows: 1fr 1fr 10fr;
     height: 100%;
-    /* background-color: rgb(157, 157, 241); */
+    background-color: rgb(157, 157, 241);
 }
 
 .logo {
     height: 100%;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
 }
 
-img {
-    height: 50%;
+.add-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .add-project {
@@ -48,4 +51,9 @@ img {
 .add-project:hover {
     background-color: skyblue;
     border: 4px solid rgb(39, 194, 39);
+}
+
+.projects-list {
+    display: flex;
+    justify-content: center;
 }
